changes addressed